--- a/css/style.css
+++ b/css/style.css
@@ -48,13 +48,13 @@
   }
   
   a {
-    color: #F85A16;
+    color: #266CA9;
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
   }
   a:hover, a:active, a:focus {
-    color: #F85A16;
+    color: #266CA9;
     outline: none;
     text-decoration: none;
   }
@@ -63,7 +63,7 @@
     margin-bottom: 20px;
   }
   
-  h1, h2, h3, h4, h5, h6, figure {
+   h1, h2, h3, h4, h5, h6, figure {
     color: #000;
     font-family: "Work Sans", Arial, sans-serif;
     font-weight: 400;
@@ -72,33 +72,70 @@
   
   ::-webkit-selection {
     color: #fff;
-    background: #F85A16;
+    background: #266CA9;
   }
   
   ::-moz-selection {
     color: #fff;
-    background: #F85A16;
+    background: #266CA9;
   }
   
   ::selection {
     color: #fff;
-    background: #F85A16;
+    background: #266CA9;
   }
   #Logo_ref a{
     color: rgba(255, 255, 255, 0.7);
     
   }
   .fh5co-nav {
-    margin: 0;
-    padding: 0;
+    position: fixed;
+    top: 0;
     width: 100%;
-    padding: 0;
-    z-index: 1001;
+    background-color: rgba(0, 0, 0, 0.8); /* Transparent black */
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    transition: background-color 0.3s ease;
   }
+
+  .fh5co-nav:hover {
+    background-color: rgba(0, 0, 0, 0.9);
+}
   .fh5co-nav .top-menu {
     background-color: black;
-    padding: 30px 0;
+    padding: 20px 0;
   }
+
+  /* Menu Styling */
+.top-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+}
+
+.top-menu ul li {
+    display: inline-block;
+    position: relative;
+}
+
+.top-menu ul li a {
+    color: #ffffff;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px 15px;
+}
+
+.top-menu ul li a:hover {
+    color: #266CA9; /* Gold */
+    border-bottom: 2px solid #266CA9;
+}
+
   .fh5co-nav .top {
     background: #000000;
     padding: 7px 0;
@@ -110,14 +147,41 @@
     display: inline-block;
     margin: 0;
   }
+
+  /* Social Icons */
+.fh5co-social {
+    list-style: none;
+    margin: 10px 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.fh5co-social li {
+    display: inline-block;
+}
+
+.fh5co-social a {
+    color: #ffffff;
+    font-size: 18px;
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.fh5co-social a:hover {
+    color: #266CA9; /* Gold on hover */
+    transform: scale(1.2);
+}
+
+
   .fh5co-nav .top .num {
-    font-size: 23px;
+    font-size: 20px;
     padding-right: 20px;
     margin-right: 10px;
     display: -moz-inline-stack;
     display: inline-block;
     zoom: 1;
-    display: inline;
+    /* display: inline; */
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     letter-spacing: 0px;
     color: rgba(255, 255, 255, 0.7);
@@ -144,6 +208,17 @@
   .fh5co-nav #fh5co-logo a span {
     color: #011620;
   }
+/* Logo Styling */
+#fh5co-logo a img {
+    max-width: 150px;
+    height: auto;
+    transition: transform 0.3s ease;
+}
+
+#fh5co-logo a:hover img {
+    transform: scale(1.1);
+}
+
   .fh5co-nav a {
     padding: 5px 10px;
     color: rgb(247, 242, 242);
@@ -152,9 +227,46 @@
   .art-span {
     font-size: 20px;
     font-weight: 500;
-    color:#ff1e00;
+    color:#266CA9;
   }
   
+  /* Responsive Design */
+@media (max-width: 768px) {
+    .top-menu ul {
+        flex-direction: column;
+        align-items: flex-start;
+        background-color: rgba(0, 0, 0, 0.9);
+        padding: 20px;
+        display: none; /* Hidden by default for mobile */
+    }
+
+    .top-menu ul.show {
+        display: flex; /* Shown when toggled */
+    }
+
+    .top-menu ul li a {
+        padding: 10px 0;
+    }
+
+    #fh5co-logo {
+        text-align: left;
+        margin-bottom: 15px;
+    }
+}
+
+/* Hamburger Menu (for Mobile) */
+.hamburger {
+    display: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: #ffffff;
+}
+
+@media (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+}
   
   
   @media screen and (max-width: 768px) {
@@ -172,18 +284,8 @@
     list-style: none;
     display: inline;
   }
-  .fh5co-nav ul li a {
-    font-size: 13px;
-    padding: 30px 15px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-  }
-  .fh5co-nav ul li a:hover, .fh5co-nav ul li a:focus, .fh5co-nav ul li a:active {
-    color: #000 !important;
-  }
+
+  
   .fh5co-nav ul li.has-dropdown {
     position: relative;
   }
@@ -434,7 +536,7 @@
     display: inline-block;
     zoom: 1;
     display: inline;
-    color: #F85A16;
+    color: #266CA9;
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -453,7 +555,7 @@
     position: relative;
   }
   .fh5co-contact-info ul li:before {
-    color: #F85A16;
+    color: #266CA9;
     position: absolute;
     left: 0;
     top: .05em;
@@ -501,13 +603,16 @@
     padding: 0;
     color: white;
   }
+
+  /**
+  change text size H1 
+  **/
   #fh5co-header .display-tc h1,
   #fh5co-counter .display-tc h1,
   .fh5co-cover .display-tc h1 {
     margin-bottom: 20px;
-    font-size: 54px;
+    font-size: 34px;
     line-height: 1.3;
-    text-transform: uppercase;
     font-weight: 400;
   }
   @media screen and (max-width: 768px) {
@@ -528,7 +633,7 @@
   #fh5co-counter .display-tc .btn,
   .fh5co-cover .display-tc .btn {
     padding: 15px 30px;
-    background: #F85A16 !important;
+    background: #266CA9 !important;
     color: #fff;
     border: none !important;
     font-size: 18px;
@@ -536,7 +641,7 @@
   #fh5co-header .display-tc .btn:hover,
   #fh5co-counter .display-tc .btn:hover,
   .fh5co-cover .display-tc .btn:hover {
-    background: #F85A16 !important;
+    background: #266CA9 !important;
     -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
     -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
     box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
@@ -637,7 +742,7 @@
     width: 50px;
     height: 2px;
     margin: 0 auto;
-    background: #F85A16;
+    background: #266CA9;
     content: '';
   }
   
@@ -675,7 +780,7 @@
     color: #000;
   }
   .trainer .title h3 a:hover, .trainer .title h3 a:focus {
-    color: #F85A16;
+    color: #266CA9;
   }
   .trainer .title span {
     text-transform: uppercase;
@@ -754,7 +859,7 @@
     color: white;
   }
   .fh5co-tabs .fh5co-tab-nav li.active a {
-    background: #F85A16;
+    background: #266CA9;
     color: #fff;
   }
   .fh5co-tabs .fh5co-tab-content-wrap {
@@ -824,7 +929,7 @@
   .fh5co-tabs .class-schedule li .time {
     display: inline-block;
     padding: 5px 12px;
-    background: #F85A16;
+    background: #266CA9;
     color: #fff;
     font-size: 13px;
   }
@@ -849,10 +954,10 @@
     position: relative;
   }
   .price-box.popular .btn-select-plan {
-    background: #F85A16;
+    background: #266CA9;
   }
   .price-box.popular .price {
-    color: #F85A16;
+    color: #266CA9;
   }
   .price-box .btn-select-plan {
     padding: 10px 20px;
@@ -1064,7 +1169,7 @@
     width: 60px;
     height: 2px;
     margin: 0 auto;
-    background: #F85A16;
+    background: #266CA9;
     content: '';
   }
   .fh5co-heading p {
@@ -1158,7 +1263,7 @@
     color: rgba(255, 255, 255, 0.7);
   }
   #fh5co-started h2 .percent {
-    color: #F85A16;
+    color: #266CA9;
     font-weight: 700;
   }
   #fh5co-started p {
@@ -1194,7 +1299,7 @@
   #fh5co-started .btn {
     height: 54px;
     border: none !important;
-    background: #F85A16;
+    background: #266CA9;
     color: #fff;
     font-size: 16px;
     text-transform: uppercase;
@@ -1243,7 +1348,7 @@
     padding: 2px 10px;
     padding-left: 40px;
     margin-left: -40px;
-    background: #F85A16;
+    background: #266CA9;
     position: relative;
   }
   .fh5co-blog .blog-text span.posted_on:before {
@@ -1255,7 +1360,7 @@
     height: 0;
     border-style: solid;
     border-width: 0 0 9px 9px;
-    border-color: transparent transparent #F85A16 transparent;
+    border-color: transparent transparent #266CA9 transparent;
   }
   .fh5co-blog .blog-text span.comment {
     float: right;
@@ -1264,7 +1369,7 @@
     color: rgba(0, 0, 0, 0.3);
   }
   .fh5co-blog .blog-text span.comment a i {
-    color: #F85A16;
+    color: #266CA9;
     padding-left: 7px;
   }
   .fh5co-blog .blog-text h3 {
@@ -1600,9 +1705,9 @@
   }
   
   .btn-primary {
-    background: #F85A16;
+    background: #266CA9;
     color: #fff;
-    border: 2px solid #F85A16;
+    border: 2px solid #266CA9;
   }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background: #f96c2f !important;
@@ -1610,11 +1715,11 @@
   }
   .btn-primary.btn-outline {
     background: transparent;
-    color: #F85A16;
-    border: 1px solid #F85A16;
+    color: #266CA9;
+    border: 1px solid #266CA9;
   }
   .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-    background: #F85A16;
+    background: #266CA9;
     color: #fff;
   }
   
@@ -1744,7 +1849,7 @@
   .form-control:active, .form-control:focus {
     outline: none;
     box-shadow: none;
-    border-color: #F85A16;
+    border-color: #266CA9;
   }
   
   .row-pb-md {
@@ -1767,6 +1872,8 @@
   
   .js .animate-box {
     opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 1s ease-out forwards;
   }
   
   
